# General-Files

./: .push_img2ecr.sh.swo  README.md  clorama.ipynb  connect_from_vscode2colab.ipynb  create_random_crop_data.py  linux_command.txt  pymupdf_tutorial.ipynb  pyproject.toml  stop_watch.py  train_pillar_detection_with_icevision.ipynb  train_test_split_for detr_from_anotatation_json.ipynb  utils_for_API.txt
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
docker_sample/: .dockerignore  Dockerfile  docker-compose.yml  docker_build_and_push.sh
flask_ngrok_sqlite/: app.py  for_API.ipynb  for_API.py  sql_operation.ipynb  sql_operation.py
flask_ngrok_sqlite/config/: logging_config.py
shell_script/: install_docker.sh  launch_ec2_instance.sh  package_install.sh  package_install_for_aozwrapper.sh  pass_through.sh  push_img2ecr.sh
